implementando funcionalidade dos cards

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                 </div>
             </div>
         </div>
+        <p class="descript-card">eu vou aparecer depois de clicar no botao do card
+            <button class="back">
+                voltar
+            </button>
+        </p>
     </div>
     
 	<section id="servicos">
@@ -157,6 +162,6 @@
         <i class="fa fa-whatsapp"></i>
     </a>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
